# codexspin

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: transfer.md
hooks/: hooks.json  session-start.sh
scripts/: find-codexspin.sh  transfer.sh
skills/codex/: SKILL.md
src/codexspin/: appserver.py  cli.py  jobs.py  runner.py  transfer.py
tests/: fake_codex.py  fake_rsync.py  fake_ssh.py  test_codexspin.py  test_transfer.py
