[project]
name = "codexspin"
version = "0.4.1"
description = "Spin and manage parallel Codex sessions, and transfer Claude Code sessions into Codex with visible history."
requires-python = ">=3.11"
dependencies = []
license = {file = "LICENSE"}

[project.scripts]
codexspin = "codexspin.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codexspin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
